# Ball-Pivoting-Algorithm

./: CMakeLists.txt  README.md
src/: geometry.cpp  geometry.h  init.cpp  init.h  main.cpp  pivot.cpp  pivot.h
